# WorldAnalytick

./: .gitignore  CMakeLists.txt
Demo/: .qmlls.ini  CMakeLists.txt  Main.qml
Demo/res/: CMakeLists.txt
Demo/res/i18n/: qml_en.ts  qml_fr.ts  qml_kk.ts  qml_ru.ts
Demo/src/: BrentCrudeOil.cpp  BrentCrudeOil.h  CMakeLists.txt  CopperPrices.cpp  CopperPrices.h  CrudeOil.cpp  CrudeOil.h  NaturelGas.cpp  NaturelGas.h  ShopTrt.cpp  ShopTrt.h  TskoLlp.cpp  TskoLlp.h  WheatPrice.cpp  WheatPrice.h  app.cpp  app.h  config.cpp  config.h  main.cpp  test.cpp  test.h  utils.cpp  utils.h  watcher.cpp  watcher.h
Demo/ui/: CMakeLists.txt
Demo/ui/singletons/: Fonts.qml
Demo/ui/view/: BrentCrude.qml  CopperPriceLot.qml  InputCrudeOil.qml  MenuSideBar.qml  NaturelGasLot.qml  ShopTRT.qml  TskoLLP.qml  Util.qml  Wheat.qml  Wheat12Day.qml  Wheat32Day.qml
